# pleiades_local

./: README.md  pyproject.toml
src/pleiades_local/: filesystem.py
tests/: test_filesystem.py
tests/data/preindexed/: catalog.json
tests/data/preindexed_invalid/: catalog.json
tests/data/simple/: 295374.json
